--- a/HTML/Gracias.html
+++ b/HTML/Gracias.html
@@ -14,6 +14,6 @@
 	<body>
 		<h1>¡Gracias!</h1>
 
-		<a href = "Incidencias.php"><input type = "submit" class = "submit" value = "Regresar"></a>
+		<a href = "index.php"><input type = "submit" class = "submit" value = "Regresar"></a>
 	</body>
 </html>
